--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://camilo313464:oDe5c403xO0ESwap@cluster0.mongodb.net/caney?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://camilo313464:oDe5c403xO0ESwap@cluster0.gjecgds.mongodb.net/caney?retryWrites=true&w=majority
 PORT=5000
-FRONTEND_URL=http://localhost:5173');
+FRONTEND_URL=http://localhost:5173
