--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-MONGO_URI=mongodb+srv://camilo313464:oDe5c403xO0ESwap@cluster0.gjecgds.mongodb.net/caney?retryWrites=true&w=majority
-PORT=5000
-FRONTEND_URL=http://localhost:5173
+MONGO_URI = mongodb+srv://camilo313464:oDe5c403xO0ESwap@cluster0.gjecgds.mongodb.net/Caney?retryWrites=true&w=majoritymon
+PORT = 3000
