--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI = mongodb+srv://camilo313464:oDe5c403xO0ESwap@cluster0.gjecgds.mongodb.net/Caney?retryWrites=true&w=majoritymon
+MONGO_URI = mongodb+srv://camilo313464:oDe5c403xO0ESwap@cluster0.gjecgds.mongodb.net/Caney?retryWrites=true&w=majority
 PORT = 3000
